# staterpreter

./: .gitignore  .gitmodules  CMakeLists.txt  clear_libs.sh  file.csv  file.txt  hey.csv  main  main.cpp  n.csv  prompt.cpp  prompt.h  salary.html  table.cpp  table.h  text.csv  textformat.cpp  textformat.h  utilities.cpp  utilities.h
html/: salsa.html
html/css/: style.css
include/: addCMD.cpp  cloneFileCMD.cpp  columns.cpp  columns.hpp  columnsCMD.cpp  commands.hpp  corrCMD.cpp  deleteCMD.cpp  evenRowsCMD.cpp  file_operations.cpp  file_operations.hpp  generateHTMLCMD.cpp  helpCMD.cpp  hhistoCMD.cpp  histogram  histogram.cpp  histogram.hpp  insertRowCMD.cpp  loadFile.cpp  manCMD.cpp  maxCMD.cpp  meanCMD.cpp  medianCMD.cpp  minCMD.cpp  oddRows.cpp  primesCMD.cpp  prompt.cpp  prompt.hpp  regressionCMD.cpp  replaceCMD.cpp  reportCMD.cpp  rowsCMD.cpp  showCMD.cpp  sortCMD.cpp  stdvCMD.cpp  storeFileCMD.cpp  subCMD.cpp  table.cpp  table.hpp  textformat.cpp  (+6 more)
include/commands/: CMakeLists.txt  addCMD.cpp  cloneFileCMD.cpp  columnsCMD.cpp  commands.hpp  corrCMD.cpp  deleteCMD.cpp  evenRowsCMD.cpp  generateHTMLCMD.cpp  helpCMD.cpp  hhistoCMD.cpp  insertRowCMD.cpp  loadFileCMD.cpp  manCMD.cpp  maxCMD.cpp  meanCMD.cpp  medianCMD.cpp  minCMD.cpp  oddRowsCMD.cpp  primesCMD.cpp  regressionCMD.cpp  replaceCMD.cpp  reportCMD.cpp  rowsCMD.cpp  showCMD.cpp  sortCMD.cpp  stdvCMD.cpp  storeFileCMD.cpp  subCMD.cpp  titlesCMD.cpp  varianceCMD.cpp  vhistoCMD.cpp
include/histogram/: CMakeLists.txt  histogram.cpp  histogram.hpp
include/prompt/: CMakeLists.txt  prompt.cpp
include/stats/: CMakeLists.txt  statfunctions.cpp  stats.hpp
include/table/: CMakeLists.txt  columns.cpp  table.cpp  table.hpp
include/utilities/: CMakeLists.txt  fileoperations.cpp  stringfmt.cpp  terminal.cpp  textformat.cpp  utilities.hpp
libs/fileoperations/: CMakeLists.txt
libs/fileoperations/include/fileoperations/: fileoperations.hpp
libs/fileoperations/src/: fileoperations.cpp
libs/histogram/: CMakeLists.txt
libs/histogram/include/histogram/: histogram.hpp
libs/histogram/src/: histogram.cpp
libs/statistical/: CMakeLists.txt
libs/statistical/include/statistical/: statistical.hpp
libs/statistical/src/: statistical.cpp
libs/strfmt/: CMakeLists.txt
libs/strfmt/src/: strfmt.cpp
libs/table/: CMakeLists.txt
libs/table/include/table/: table.hpp
libs/table/src/: columns.cpp  table.cpp
libs/terminal/: CMakeLists.txt
libs/terminal/include/terminal/: terminal.hpp
libs/terminal/src/: terminal.cpp
src/: main.cpp
src/commands/: addCMD.cpp  cloneFileCMD.cpp  columnsCMD.cpp  commands.hpp  corrCMD.cpp  deleteCMD.cpp  evenRowsCMD.cpp  generateHTMLCMD.cpp  helpCMD.cpp  hhistoCMD.cpp  insertRowCMD.cpp  loadFileCMD.cpp  manCMD.cpp  maxCMD.cpp  meanCMD.cpp  medianCMD.cpp  minCMD.cpp  oddRowsCMD.cpp  primesCMD.cpp  regressionCMD.cpp  replaceCMD.cpp  reportCMD.cpp  rowsCMD.cpp  showCMD.cpp  sortCMD.cpp  stdvCMD.cpp  storeFileCMD.cpp  subCMD.cpp  titlesCMD.cpp  varianceCMD.cpp  vhistoCMD.cpp
src/html/css/: style.css
src/prompt/: prompt.cpp  prompt.hpp
src/res/: file.csv
